ons-social-crawler-fe/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: ons2-fe
spec:
 strategy:
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 0
   type: RollingUpdate
 replicas: 1
 selector:
   matchLabels:
     app: ons2-fe
 template:
   metadata:
     labels:
       app: ons2-fe
   spec:
     containers:
       - name: ons2-fe
         image: gcr.io/ons-hatespeech-detector-2/ons2-fe
         resources:
           limits:
             cpu: 100m
             memory: 256m
           requests:
             cpu: 100m
             memory: 256m
         livenessProbe:
           httpGet:
             path: /
             port: 80
           initialDelaySeconds: 3
           periodSeconds: 3
         readinessProbe:
           httpGet:
             path: /
             port: 80
           initialDelaySeconds: 3
           periodSeconds: 3        
---
apiVersion: v1
kind: Service
metadata:
  name: ons2-fe
spec:
  type: NodePort
  selector:
    app: ons2-fe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
